--- a/10.0/Dockerfile
+++ b/10.0/Dockerfile
@@ -20,6 +20,7 @@ RUN set -x; \
         && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false npm \
         && rm -rf /var/lib/apt/lists/* wkhtmltox.deb \
         && pip install psycogreen==1.0
+        && pip install certifi
 
 # Install Odoo
 ENV ODOO_VERSION 10.0
